Loyiha to'liq yakullandi

--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
                                 </svg>
                             </span>
                         </div>
-                        <a href="#"><button class="today__wrapper--cards--card--btn">Add To Cart</button></a>
+                        <a href="./pages/praduct/"><button class="today__wrapper--cards--card--btn">Add To Cart</button></a>
                         <div class="today__wrapper--cards--card--botton">
                             <h2>AK-900 Wired Keyboard</h2>
                             <h3 class="today__wrapper--cards--card--botton--h3">
@@ -482,7 +482,7 @@
                                 </svg>
                             </span>
                         </div>
-                        <a href="#"><button class="today__wrapper--cards--card--btn">Add To Cart</button></a>
+                        <a href="./pages/praduct/"><button class="today__wrapper--cards--card--btn">Add To Cart</button></a>
                         <div class="today__wrapper--cards--card--botton">
                             <h2>AK-900 Wired Keyboard</h2>
                             <h3 class="today__wrapper--cards--card--botton--h3">
@@ -522,7 +522,7 @@
                                 </svg>
                             </span>
                         </div>
-                        <a href="#"><button class="today__wrapper--cards--card--btn">Add To Cart</button></a>
+                        <a href="./pages/praduct/"><button class="today__wrapper--cards--card--btn">Add To Cart</button></a>
                         <div class="today__wrapper--cards--card--botton">
                             <h2>IPS LCD Gaming Monitor</h2>
                             <h3 class="today__wrapper--cards--card--botton--h3">
@@ -562,7 +562,7 @@
                                 </svg>
                             </span>
                         </div>
-                        <a href="#"><button class="today__wrapper--cards--card--btn">Add To Cart</button></a>
+                        <a href="./pages/praduct/"><button class="today__wrapper--cards--card--btn">Add To Cart</button></a>
                         <div class="today__wrapper--cards--card--botton">
                             <h2>S-Series Comfort Chair </h2>
                             <h3 class="today__wrapper--cards--card--botton--h3">
@@ -602,7 +602,7 @@
                                 </svg>
                             </span>
                         </div>
-                        <a href="#"><button class="today__wrapper--cards--card--btn">Add To Cart</button></a>
+                        <a href="./pages/praduct/"><button class="today__wrapper--cards--card--btn">Add To Cart</button></a>
                         <div class="today__wrapper--cards--card--botton">
                             <h2>S-Series Comfort Chair </h2>
                             <h3 class="today__wrapper--cards--card--botton--h3">
@@ -642,7 +642,7 @@
                                 </svg>
                             </span>
                         </div>
-                        <a href="#"><button class="today__wrapper--cards--card--btn">Add To Cart</button></a>
+                        <a href="./pages/praduct/"><button class="today__wrapper--cards--card--btn">Add To Cart</button></a>
                         <div class="today__wrapper--cards--card--botton">
                             <h2>AK-900 Wired Keyboard</h2>
                             <h3 class="today__wrapper--cards--card--botton--h3">
@@ -909,7 +909,7 @@
                                     </svg>
                                 </span>
                             </div>
-                            <a href="#"><button class="today__wrapper--cards--card--btn">Add To Cart</button></a>
+                            <a href="./pages/praduct/"><button class="today__wrapper--cards--card--btn">Add To Cart</button></a>
                             <div class="today__wrapper--cards--card--botton">
                                 <h2>AK-900 Wired Keyboard</h2>
                                 <h3 class="today__wrapper--cards--card--botton--h3">
@@ -949,7 +949,7 @@
                                     </svg>
                                 </span>
                             </div>
-                            <a href="#"><button class="today__wrapper--cards--card--btn">Add To Cart</button></a>
+                            <a href="./pages/praduct/"><button class="today__wrapper--cards--card--btn">Add To Cart</button></a>
                             <div class="today__wrapper--cards--card--botton">
                                 <h2>AK-900 Wired Keyboard</h2>
                                 <h3 class="today__wrapper--cards--card--botton--h3">
@@ -989,7 +989,7 @@
                                     </svg>
                                 </span>
                             </div>
-                            <a href="#"><button class="today__wrapper--cards--card--btn">Add To Cart</button></a>
+                            <a href="./pages/praduct/"><button class="today__wrapper--cards--card--btn">Add To Cart</button></a>
                             <div class="today__wrapper--cards--card--botton">
                                 <h2>IPS LCD Gaming Monitor</h2>
                                 <h3 class="today__wrapper--cards--card--botton--h3">
@@ -1029,7 +1029,7 @@
                                     </svg>
                                 </span>
                             </div>
-                            <a href="#"><button class="today__wrapper--cards--card--btn">Add To Cart</button></a>
+                            <a href="./pages/praduct/"><button class="today__wrapper--cards--card--btn">Add To Cart</button></a>
                             <div class="today__wrapper--cards--card--botton">
                                 <h2>S-Series Comfort Chair </h2>
                                 <h3 class="today__wrapper--cards--card--botton--h3">
@@ -1069,7 +1069,7 @@
                                     </svg>
                                 </span>
                             </div>
-                            <a href="#"><button class="today__wrapper--cards--card--btn">Add To Cart</button></a>
+                            <a href="./pages/praduct/"><button class="today__wrapper--cards--card--btn">Add To Cart</button></a>
                             <div class="today__wrapper--cards--card--botton">
                                 <h2>S-Series Comfort Chair </h2>
                                 <h3 class="today__wrapper--cards--card--botton--h3">
@@ -1109,7 +1109,7 @@
                                     </svg>
                                 </span>
                             </div>
-                            <a href="#"><button class="today__wrapper--cards--card--btn">Add To Cart</button></a>
+                            <a href="./pages/praduct/"><button class="today__wrapper--cards--card--btn">Add To Cart</button></a>
                             <div class="today__wrapper--cards--card--botton">
                                 <h2>AK-900 Wired Keyboard</h2>
                                 <h3 class="today__wrapper--cards--card--botton--h3">
@@ -1218,7 +1218,7 @@
                                     </svg>
                                 </span>
                             </div>
-                            <a href="#"><button class="products__wrapper--cards--card--btn">Add To Cart</button></a>
+                            <a href="./pages/praduct/"><button class="products__wrapper--cards--card--btn">Add To Cart</button></a>
                             <div class="products__wrapper--cards--card--botton">
                                 <h2>AK-900 Wired Keyboard</h2>
                                 <h3 class="products__wrapper--cards--card--botton--h3">
@@ -1259,7 +1259,7 @@
                                     </svg>
                                 </span>
                             </div>
-                            <a href="#"><button class="products__wrapper--cards--card--btn">Add To Cart</button></a>
+                            <a href="./pages/praduct/"><button class="products__wrapper--cards--card--btn">Add To Cart</button></a>
                             <div class="products__wrapper--cards--card--botton">
                                 <h2>AK-900 Wired Keyboard</h2>
                                 <h3 class="products__wrapper--cards--card--botton--h3">
@@ -1300,7 +1300,7 @@
                                     </svg>
                                 </span>
                             </div>
-                            <a href="#"><button class="products__wrapper--cards--card--btn">Add To Cart</button></a>
+                            <a href="./pages/praduct/"><button class="products__wrapper--cards--card--btn">Add To Cart</button></a>
                             <div class="products__wrapper--cards--card--botton">
                                 <h2>IPS LCD Gaming Monitor</h2>
                                 <h3 class="products__wrapper--cards--card--botton--h3">
@@ -1341,7 +1341,7 @@
                                     </svg>
                                 </span>
                             </div>
-                            <a href="#"><button class="products__wrapper--cards--card--btn">Add To Cart</button></a>
+                            <a href="./pages/praduct/"><button class="products__wrapper--cards--card--btn">Add To Cart</button></a>
                             <div class="products__wrapper--cards--card--botton">
                                 <h2>S-Series Comfort Chair </h2>
                                 <h3 class="products__wrapper--cards--card--botton--h3">
@@ -1382,7 +1382,7 @@
                                     </svg>
                                 </span>
                             </div>
-                            <a href="#"><button class="products__wrapper--cards--card--btn">Add To Cart</button></a>
+                            <a href="./pages/praduct/"><button class="products__wrapper--cards--card--btn">Add To Cart</button></a>
                             <div class="products__wrapper--cards--card--botton">
                                 <h2>S-Series Comfort Chair </h2>
                                 <h3 class="products__wrapper--cards--card--botton--h3">
@@ -1423,7 +1423,7 @@
                                     </svg>
                                 </span>
                             </div>
-                            <a href="#"><button class="products__wrapper--cards--card--btn">Add To Cart</button></a>
+                            <a href="./pages/praduct/"><button class="products__wrapper--cards--card--btn">Add To Cart</button></a>
                             <div class="products__wrapper--cards--card--botton">
                                 <h2>AK-900 Wired Keyboard</h2>
                                 <h3 class="products__wrapper--cards--card--botton--h3">
@@ -1464,7 +1464,7 @@
                                     </svg>
                                 </span>
                             </div>
-                            <a href="#"><button class="products__wrapper--cards--card--btn">Add To Cart</button></a>
+                            <a href="./pages/praduct/"><button class="products__wrapper--cards--card--btn">Add To Cart</button></a>
                             <div class="products__wrapper--cards--card--botton">
                                 <h2>AK-900 Wired Keyboard</h2>
                                 <h3 class="products__wrapper--cards--card--botton--h3">
@@ -1506,7 +1506,7 @@
                                     </svg>
                                 </span>
                             </div>
-                            <a href="#"><button class="products__wrapper--cards--card--btn">Add To Cart</button></a>
+                            <a href="./pages/praduct/"><button class="products__wrapper--cards--card--btn">Add To Cart</button></a>
                             <div class="products__wrapper--cards--card--botton">
                                 <h2>AK-900 Wired Keyboard</h2>
                                 <h3 class="products__wrapper--cards--card--botton--h3">
@@ -1548,7 +1548,7 @@
                                     </svg>
                                 </span>
                             </div>
-                            <a href="#"><button class="products__wrapper--cards--card--btn">Add To Cart</button></a>
+                            <a href="./pages/praduct/"><button class="products__wrapper--cards--card--btn">Add To Cart</button></a>
                             <div class="products__wrapper--cards--card--botton">
                                 <h2>AK-900 Wired Keyboard</h2>
                                 <h3 class="products__wrapper--cards--card--botton--h3">
@@ -1590,7 +1590,7 @@
                                     </svg>
                                 </span>
                             </div>
-                            <a href="#"><button class="products__wrapper--cards--card--btn">Add To Cart</button></a>
+                            <a href="./pages/praduct/"><button class="products__wrapper--cards--card--btn">Add To Cart</button></a>
                             <div class="products__wrapper--cards--card--botton">
                                 <h2>AK-900 Wired Keyboard</h2>
                                 <h3 class="products__wrapper--cards--card--botton--h3">
@@ -1632,7 +1632,7 @@
                                     </svg>
                                 </span>
                             </div>
-                            <a href="#"><button class="products__wrapper--cards--card--btn">Add To Cart</button></a>
+                            <a href="./pages/praduct/"><button class="products__wrapper--cards--card--btn">Add To Cart</button></a>
                             <div class="products__wrapper--cards--card--botton">
                                 <h2>AK-900 Wired Keyboard</h2>
                                 <h3 class="products__wrapper--cards--card--botton--h3">
@@ -1674,7 +1674,7 @@
                                     </svg>
                                 </span>
                             </div>
-                            <a href="#"><button class="products__wrapper--cards--card--btn">Add To Cart</button></a>
+                            <a href="./pages/praduct/"><button class="products__wrapper--cards--card--btn">Add To Cart</button></a>
                             <div class="products__wrapper--cards--card--botton">
                                 <h2>AK-900 Wired Keyboard</h2>
                                 <h3 class="products__wrapper--cards--card--botton--h3">
@@ -1691,7 +1691,7 @@
                         </div>
                     </div>
                     <div class="products__wrapper--btn">
-                        <a href="#"><button>View All Products</button></a>
+                        <a href="./pages/praduct/"><button>View All Products</button></a>
                     </div>
                 </div>
             </div>
@@ -1936,6 +1936,7 @@
 <!-- Initialize Swiper -->
 <script>
     var swiper = new Swiper(".mySwiper", {
+        autoplay:true,
         pagination: {
             el: ".swiper-pagination",
         },
