--- a/pages/accaunt/index.html
+++ b/pages/accaunt/index.html
@@ -233,7 +233,7 @@
                                     <label for="Email">
                                         <p>Email</p>
                                         <input type="email" id="Email" name="Email" placeholder="rimel1111@gmail.com">
-                                    </label> 
+                                    </label>
                                 </div>
                                 <div class="accaunt__main--wrapper--right--form--top--right">
                                     <label for="Last Name">
@@ -242,28 +242,32 @@
                                     </label>
                                     <label for="Address">
                                         <p>Address</p>
-                                        <input type="text" id="Address" name="Address" placeholder="Kingston, 5236, United State">
+                                        <input type="text" id="Address" name="Address"
+                                            placeholder="Kingston, 5236, United State">
                                     </label>
                                 </div>
                             </div>
                             <div class="accaunt__main--wrapper--right--form--botton">
                                 <label for="Password Changes">
                                     <p>Password Changes</p>
-                                    <input type="text" id="Password Changes" name="Password Changes" placeholder="Current Passwod">
-                                    <input type="text" id="Password Changes" name="Password Changes" placeholder="New Passwod">
-                                    <input type="text" id="Password Changes" name="Password Changes" placeholder="Confirm New Passwod">
+                                    <input type="text" id="Password Changes" name="Password Changes"
+                                        placeholder="Current Passwod">
+                                    <input type="text" id="Password Changes" name="Password Changes"
+                                        placeholder="New Passwod">
+                                    <input type="text" id="Password Changes" name="Password Changes"
+                                        placeholder="Confirm New Passwod">
                                 </label>
                             </div>
                             <div class="accaunt__main--wrapper--right--form--btn">
-                               <p>Cancel</p>
-                               <button type="submit">Save Changes</button>
+                                <p>Cancel</p>
+                                <button type="submit">Save Changes</button>
                             </div>
                         </form>
                     </div>
                 </div>
             </div>
-            </section>
-            <!-- Section accaunt main end -->
+        </section>
+        <!-- Section accaunt main end -->
     </main>
     <!--main end  -->
     <!-- footer start -->
