--- a/pages/cart-page/index.html
+++ b/pages/cart-page/index.html
@@ -60,33 +60,41 @@
                             <div class="header__botton--wrapper--right--icons">
                                 <div class="header__botton--wrapper--right--icons--icon1">
                                     <a href="../wishlist-page/">
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
-                                            viewBox="0 0 32 32" fill="none">
+                                        <svg width="32" height="32" viewBox="0 0 32 32" fill="none"
+                                            xmlns="http://www.w3.org/2000/svg">
                                             <path
-                                                d="M11 7C8.239 7 6 9.216 6 11.95C6 14.157 6.875 19.395 15.488 24.69C15.6423 24.7839 15.8194 24.8335 16 24.8335C16.1806 24.8335 16.3577 24.7839 16.512 24.69C25.125 19.395 26 14.157 26 11.95C26 9.216 23.761 7 21 7C18.239 7 16 10 16 10C16 10 13.761 7 11 7Z"
+                                                d="M11 7C8.239 7 6 9.23669 6 11.9962C6 14.2238 6.875 19.5107 15.488 24.8551C15.6423 24.9499 15.8194 25 16 25C16.1806 25 16.3577 24.9499 16.512 24.8551C25.125 19.5107 26 14.2238 26 11.9962C26 9.23669 23.761 7 21 7C18.239 7 16 10.028 16 10.028C16 10.028 13.761 7 11 7Z"
                                                 stroke="black" stroke-width="1.5" stroke-linecap="round"
                                                 stroke-linejoin="round" />
+                                            <circle cx="24" cy="9" r="8" fill="#DB4444" />
+                                            <path
+                                                d="M20.2066 11.068V10.24L24.4186 4.408H25.7266V10.12H26.9266V11.068H25.7266V13H24.6466V11.068H20.2066ZM24.6946 5.548L21.4666 10.12H24.6946V5.548Z"
+                                                fill="#FAFAFA" />
                                         </svg>
                                     </a>
                                 </div>
                                 <div class="header__botton--wrapper--right--icons--icon2">
                                     <a href="./index.html">
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
-                                            viewBox="0 0 32 32" fill="none">
+                                        <svg width="32" height="32" viewBox="0 0 32 32" fill="none"
+                                            xmlns="http://www.w3.org/2000/svg">
                                             <path
-                                                d="M11 27C11.5523 27 12 26.5523 12 26C12 25.4477 11.5523 25 11 25C10.4477 25 10 25.4477 10 26C10 26.5523 10.4477 27 11 27Z"
+                                                d="M9.25 28.25C9.66421 28.25 10 27.9142 10 27.5C10 27.0858 9.66421 26.75 9.25 26.75C8.83579 26.75 8.5 27.0858 8.5 27.5C8.5 27.9142 8.83579 28.25 9.25 28.25Z"
                                                 stroke="black" stroke-width="1.5" stroke-linecap="round"
                                                 stroke-linejoin="round" />
                                             <path
-                                                d="M25 27C25.5523 27 26 26.5523 26 26C26 25.4477 25.5523 25 25 25C24.4477 25 24 25.4477 24 26C24 26.5523 24.4477 27 25 27Z"
+                                                d="M19.75 28.25C20.1642 28.25 20.5 27.9142 20.5 27.5C20.5 27.0858 20.1642 26.75 19.75 26.75C19.3358 26.75 19 27.0858 19 27.5C19 27.9142 19.3358 28.25 19.75 28.25Z"
                                                 stroke="black" stroke-width="1.5" stroke-linecap="round"
                                                 stroke-linejoin="round" />
-                                            <path d="M3 5H7L10 22H26" stroke="black" stroke-width="1.5"
+                                            <path d="M3.25 11.75H6.25L8.5 24.5H20.5" stroke="black" stroke-width="1.5"
                                                 stroke-linecap="round" stroke-linejoin="round" />
                                             <path
-                                                d="M10 16.6667H25.59C25.7056 16.6667 25.8177 16.6267 25.9072 16.5535C25.9966 16.4802 26.0579 16.3782 26.0806 16.2648L27.8806 7.26479C27.8951 7.19222 27.8934 7.11733 27.8755 7.04552C27.8575 6.97371 27.8239 6.90678 27.7769 6.84956C27.73 6.79234 27.6709 6.74625 27.604 6.71462C27.5371 6.68299 27.464 6.66661 27.39 6.66666H8"
+                                                d="M8.5 20.5H20.1925C20.2792 20.5001 20.3633 20.4701 20.4304 20.4151C20.4975 20.3601 20.5434 20.2836 20.5605 20.1986L21.9105 13.4486C21.9214 13.3942 21.92 13.338 21.9066 13.2841C21.8931 13.2303 21.8679 13.1801 21.8327 13.1372C21.7975 13.0943 21.7532 13.0597 21.703 13.036C21.6528 13.0122 21.598 13 21.5425 13H7"
                                                 stroke="black" stroke-width="1.5" stroke-linecap="round"
                                                 stroke-linejoin="round" />
+                                            <circle cx="23" cy="10" r="8" fill="#DB4444" />
+                                            <path
+                                                d="M20.6608 13.124C21.6768 12.308 22.4728 11.64 23.0488 11.12C23.6248 10.592 24.1088 10.044 24.5008 9.476C24.9008 8.9 25.1008 8.336 25.1008 7.784C25.1008 7.264 24.9728 6.856 24.7168 6.56C24.4688 6.256 24.0648 6.104 23.5048 6.104C22.9608 6.104 22.5368 6.276 22.2328 6.62C21.9368 6.956 21.7768 7.408 21.7528 7.976H20.6968C20.7288 7.08 21.0008 6.388 21.5128 5.9C22.0248 5.412 22.6848 5.168 23.4928 5.168C24.3168 5.168 24.9688 5.396 25.4488 5.852C25.9368 6.308 26.1808 6.936 26.1808 7.736C26.1808 8.4 25.9808 9.048 25.5808 9.68C25.1888 10.304 24.7408 10.856 24.2368 11.336C23.7328 11.808 23.0888 12.36 22.3048 12.992H26.4328V13.904H20.6608V13.124Z"
+                                                fill="#FAFAFA" />
                                         </svg>
                                     </a>
                                 </div>
